--- a/workloads/testpmd/sriov_network_node_policy.yaml
+++ b/workloads/testpmd/sriov_network_node_policy.yaml
@@ -9,6 +9,6 @@ spec:
     pfNames:
      - ens2f1
   nodeSelector:
-    node-role.kubernetes.io/worker: ""
+    node-role.kubernetes.io/worker-rt: ""
   numVfs: 20
   resourceName: intelnics
