changed the perf profile to be re-used

--- a/workloads/oslat/perf_profile.yaml
+++ b/workloads/oslat/perf_profile.yaml
@@ -16,7 +16,7 @@ spec:
    numa:
      topologyPolicy: "best-effort"
    nodeSelector:
-     node-role.kubernetes.io/worker-lat: ""
+     node-role.kubernetes.io/worker-rt: ""
    realTimeKernel:
      enabled: true
    additionalKernelArgs:
