--- a/workloads/oslat/machineconfigpool.yaml
+++ b/workloads/oslat/machineconfigpool.yaml
@@ -1,11 +1,11 @@
 apiVersion: machineconfiguration.openshift.io/v1
 kind: MachineConfigPool
 metadata:
-  name: "worker-lat"
+  name: "worker-rt"
 spec:
   machineConfigSelector:
     matchExpressions:
-      - {key: machineconfiguration.openshift.io/role, operator: In, values: [worker,worker-lat]}
+      - {key: machineconfiguration.openshift.io/role, operator: In, values: [worker,worker-rt]}
   nodeSelector:
     matchLabels:
-      node-role.kubernetes.io/worker-lat: ""
+      node-role.kubernetes.io/worker-rt: ""
