--- a/workloads/testpmd/perf_profile.yaml
+++ b/workloads/testpmd/perf_profile.yaml
@@ -5,8 +5,8 @@ metadata:
    name: benchmark-performance-profile-0
 spec:
    cpu:
-     isolated: "6,8,10,12,14,16,18,20,22,24,26,28"
-     reserved: "0-5,7,9,11,13,15,17,19,21,23,25,27,29"
+     isolated: "_ISOLATED_"
+     reserved: "_RESRVED_"
    hugepages:
      defaultHugepagesSize: "1G"
      pages:
