added socket_memory to the crd and the env

--- a/workloads/testpmd/ripsaw-testpmd-crd.yaml
+++ b/workloads/testpmd/ripsaw-testpmd-crd.yaml
@@ -12,6 +12,7 @@ spec:
       pin: ${PIN}
       pin_testpmd: ${PIN_TESTPMD}
       pin_trex: ${PIN_TREX}
+      socket_memory: ${SOCKET_MEMORY}
       networks:
         testpmd:
           - name: ${NETWORK_NAME}
