--- a/workloads/testpmd/perf_profile.yaml
+++ b/workloads/testpmd/perf_profile.yaml
@@ -6,13 +6,13 @@ metadata:
 spec:
    cpu:
      isolated: "_ISOLATED_"
-     reserved: "_RESRVED_"
+     reserved: "_RESERVED_"
    hugepages:
      defaultHugepagesSize: "1G"
      pages:
      - size: "1G"
        count: 16
-       node: 0
+       node: "_NUMA_NODE_"
    numa:
      topologyPolicy: "best-effort"
    nodeSelector:
