moved from sed to envsubst - UNTESTED!

--- a/workloads/testpmd/sriov_network_node_policy.yaml
+++ b/workloads/testpmd/sriov_network_node_policy.yaml
@@ -7,7 +7,7 @@ spec:
   deviceType: vfio-pci
   nicSelector:
     pfNames:
-     - _SRIOV_NIC_
+     - $sriov_nic
   nodeSelector:
     node-role.kubernetes.io/worker-rt: ""
   numVfs: 20
