--- a/workloads/testpmd/perf_profile.yaml
+++ b/workloads/testpmd/perf_profile.yaml
@@ -5,14 +5,14 @@ metadata:
    name: benchmark-performance-profile-0
 spec:
    cpu:
-     isolated: "_ISOLATED_"
-     reserved: "_RESERVED_"
+     isolated: "$isolated_cpus"
+     reserved: "$reserved_cpus"
    hugepages:
      defaultHugepagesSize: "1G"
      pages:
      - size: "1G"
        count: 16
-       node: "_NUMA_NODE_"
+       node: "$numa_node"
    numa:
      topologyPolicy: "best-effort"
    nodeSelector:
