--- a/workloads/testpmd/perf_profile.yaml
+++ b/workloads/testpmd/perf_profile.yaml
@@ -12,7 +12,7 @@ spec:
      pages:
      - size: "1G"
        count: 16
-       node: "$numa_node"
+       node: $numa_node
    numa:
      topologyPolicy: "best-effort"
    nodeSelector:
