added support for nodeSelectors

--- a/workloads/cyclictest/ripsaw-cyclictest-crd.yaml
+++ b/workloads/cyclictest/ripsaw-cyclictest-crd.yaml
@@ -9,6 +9,7 @@ spec:
   workload:
     name: "cyclictest"
     args:
+      nodeSelector: $nodeselector
       duration: ${DURATION}
       disable_cpu_balance: ${DISABLE_CPU_BALANCE}
       stressng: ${STRESSNG}
